fixed job get method for users not owning jobs
