# main.go
@@ -194,13 +194,13 @@ func main() {
 	basepath := router.Group("/api/v1")
 	{
 		ac.SetAuthRoutes(basepath)
-		audit := basepath.Group("/audit_logs")
+		audit := basepath.Group("/audit-logs")
 		runners := basepath.Group("/runners")
 		tasks := basepath.Group("/tasks")
 		jobs := basepath.Group("/jobs")
 		cronjobs := basepath.Group("/cronjobs")
 		users := basepath.Group("/users")
-		tokens := basepath.Group("/api_tokens")
+		tokens := basepath.Group("/api-tokens")
 		groups := basepath.Group("/groups")
 		roles := basepath.Group("/roles")
 		webhooks := basepath.Group("/webhooks")
